--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -131,11 +131,11 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
-        applicationId "online.camtur"
+        applicationId "visitbanos.travel"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 3
-        versionName "3.0"
+        versionCode 2
+        versionName "2.0"
     }
     splits {
         abi {
