--- a/ios/Podfile
+++ b/ios/Podfile
@@ -16,6 +16,8 @@ target 'camtur' do
     :hermes_enabled => false
   )
 
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-async-storage/async-storage'
+
   target 'camturTests' do
     inherit! :complete
     # Pods for testing
